[package]
name = "simple-parser-bootstrap"
version = "0.1.0"
authors = ["Robert Durfee <rbd@mit.edu>"]
description = "A simple, runtime recursive descent parser generator."
license-file = "LICENSE"
repository = "https://github.com/RobertDurfee/ParserGenerator"
readme = "README.md"
keywords = ["parser", "parser-generator"]
categories = ["parsing"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-lexer-bootstrap = "0.1.0"
