[package]
name = "simple-parser-bootstrap"
version = "0.1.0"
authors = ["Robert Durfee <rbd@mit.edu>"]
description = "A simple, runtime recursive descent parser generator."
license = "MIT"
repository = "https://github.com/RobertDurfee/ParserGenerator/tree/v0.1.0"
readme = "README.md"
keywords = ["parser", "parser-generator"]
categories = ["parsing"]
edition = "2018"
documentation = "https://docs.rs/simple-parser-bootstrap/0.1.0/simple_parser_bootstrap/"
homepage = "https://github.com/RobertDurfee/ParserGenerator/tree/v0.1.0"

[dependencies]
simple-lexer-bootstrap = { path = "../../LexerGenerator/simple-lexer-bootstrap", version = "0.1.0" }
