[package]
name = "simple-parser"
version = "0.1.0"
authors = ["Robert Durfee <rbd@mit.edu>"]
description = "A simple, runtime recursive descent parser generator."
license-file = "LICENSE"
repository = "https://github.com/RobertDurfee/ParserGenerator"
readme = "README.md"
keywords = ["parser", "parser-generator"]
categories = ["parsing"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
segment-map = "0.1.0"
regular-expression-bootstrap = "0.1.0"
simple-lexer-bootstrap = "0.1.0"
simple-parser-bootstrap = "0.1.0"
