[package]
name = "simple-parser"
version = "0.1.0"
authors = ["Robert Durfee <rbd@mit.edu>"]
description = "A simple, runtime recursive descent parser generator."
license = "MIT"
repository = "https://github.com/RobertDurfee/ParserGenerator/tree/v0.1.0"
readme = "README.md"
keywords = ["parser", "parser-generator"]
categories = ["parsing"]
edition = "2018"
documentation = "https://docs.rs/simple-parser/0.1.0/simple_parser/"
homepage = "https://github.com/RobertDurfee/ParserGenerator/tree/v0.1.0"

[dependencies]
lazy_static = "1.4.0"
segment-map = { path = "../../SegmentMap", version = "0.1.0" }
regular-expression-bootstrap = { path = "../../RegularExpression/regular-expression-bootstrap", version = "0.1.0" }
simple-lexer-bootstrap = { path = "../../LexerGenerator/simple-lexer-bootstrap", version = "0.1.0" }
simple-parser-bootstrap = { path = "../simple-parser-bootstrap", version = "0.1.0" }
